--- a/tcc2/editaveis/abstract.tex
+++ b/tcc2/editaveis/abstract.tex
@@ -1,17 +1,22 @@
 \begin{resumo}[Abstract]
   \begin{otherlanguage*}{english}
-   During the menstrual cycle women go through various hormonal changes that can lead to
- changes in mood, behavior and physical symptoms. These changes can influence 
- the willingness to perform certain daily tasks. To help with self-knowledge, improve emotional 
- intelligence and enable them to use the benefits and deal with
- harm in a healthy and conscious way, this work proposes the realization of an 
- application with a task suggestion system based on
- profile and phase of the menstrual cycle. This system makes use of the inversion counting algorithm
- in a collaborative recommender system, which will suggest tasks
- that can be performed with more ease or difficulty. With bibliographic reference
- it was possible to use the calendar method to determine the phase of the cycle and with the
- case study, it was possible to survey the profiles and daily tasks to be used in the
- recommendation system.
+    During the menstrual cycle, women go through several hormonal changes that
+    can lead to
+    changes in mood, behavior and physical symptoms. These changes can influence the
+    willingness to perform certain everyday tasks. This work implements an application 
+    with a system of
+    task suggestion based on
+    profile and phase of the menstrual cycle, 
+    for help in self-knowledge, to improve emotional intelligence
+    of these people, and to enable them to enjoy the benefits and deal with the
+    harm
+    in a healthy and conscious way. This system employs of the inversion counting algorithm
+    in a collaborative recommender system, trying to suggest tasks
+    that can be performed with more ease or difficulty. 
+    It was possible to use the calendar method to determine the phase of the cycle through 
+    the bibliographic reference. On the other 
+    hand, the profiles and daily tasks used by the recommendation system 
+    was developed considering the results of a survey.
     \vspace{\onelineskip}
   
     \noindent 
