--- a/tcc2/editaveis/capfinal.tex
+++ b/tcc2/editaveis/capfinal.tex
@@ -2,7 +2,7 @@
 \label{ch:capfinal}
 
 Neste capítulo, será apresentada a análise de resultados, relativos ao teste de usabilidade, orientando-se pela metodologia 
-descrita na seção \ref{vsf}. Portanto, constam seções dedicadas à: formulação do problema; definição da unidade 
+descrita na Seção \ref{vsf}. Portanto, constam seções dedicadas à: formulação do problema; definição da unidade 
 caso; determinação do número de casos; elaboração do protocolo; coleta de dados e avaliação e análise de dados.
 Por fim, têm-se as considerações finais do capítulo.
 
@@ -14,8 +14,8 @@ há a liberação do óvulo.
 Quando o óvulo é liberado, tem início a fase lútea, que também pode ser dividida em fase lútea inicial e 
 fase lútea final, sendo quando, para algumas pessoas, acontece a TPM.
 
-Durante essas fases, as pessoas passam por várias mudanças hormonais, que podem influenciar nas tarefas 
-cotidianas, demandando mais energia para a realização de certas tarefas. Na fase folicular final e lútea inicial, de acordo com a referência bibliográfica, 
+Durante essas fases, as pessoas passam por várias mudanças hormonais, que podem influenciar as tarefas 
+cotidianas, demandando mais energia para a realização de algumas delas. Na fase folicular final e lútea inicial, de acordo com a Seção \ref{21}, 
 foi relatada uma melhora significativa no desempenho das atividades cognitivas e verbais, enquanto no final da fase 
 lútea, há a relação com o aumento do cortisol, hormônio do stress e uma certa dificuldade na classificação 
 no reconhecimento de expressões, tendendo a reconhecer expressões neutras como negativas. Outros fatores como a TPM, que envolve
@@ -33,27 +33,18 @@ método do calendário.
 
 Foi utilizado o estudo de caso para realizar a coleta de dados e a análise de resultados, anteriormente descritas nas seções \ref{vsf1} e \ref{vsf2}, 
 sobre o perfil das mulheres e para determinar quais tarefas iriam demandar 
-menos ou mais energia para serem executadas. Além disso, também foi possível estabelecer três grupos de recomendação iniciais, sendo que o 
-primeiro é para mulheres que utilizam método contraceptivos hormonais; o segundo para mulheres que não utilizam métodos contraceptivos hormonais e 
-não possuem distúrbios endócrinos, e o terceiro é para mulheres que não utilizam métodos contraceptivos hormonais e possuem distúrbios endócrinos. 
+menos ou mais energia para serem executadas. Além disso, também foi possível estabelecer três grupos de mulheres que: (1) utilizam método contraceptivos hormonais; (2) não utilizam métodos contraceptivos hormonais e 
+não possuem distúrbios endócrinos, (3) e mulheres que não utilizam métodos contraceptivos hormonais e possuem distúrbios endócrinos. 
 Um desses três grupos é atribuído à usuária quando ela cria uma conta e responde o questionário do aplicativo Mina. 
 
 Os grupos foram inicialmente carregados com características das tarefas apontadas pelos perfis descritos anteriormente, 
-com base no segundo questionário. Há ainda um quarto grupo, que foi inicialmente carregado com informações inferidas com 
-base no referencial teórico.
+com base no segundo questionário (Tabelas \ref{tab11}, \ref{tab12} e \ref{tab13}). Há ainda um quarto grupo, que foi inicialmente carregado com informações inferidas com 
+base no referencial teórico (Tabela \ref{tab14}).
 
 Quando a usuária envia uma avaliação das tarefas, são realizados alguns cálculos através do método de contagem de inversões para determinar 
 a qual grupo a usuária está realmente mais próxima. Esses grupos são retro alimentados com as pontuações dadas pelas usuárias pertencentes a eles.
 
 \section{Definição da Unidade Caso e Determinação do Número de Casos}
-
-A unidade caso é do tipo estudo de caso coletivo. Esse tipo de estudo tem o propósito de estudar características
-de uma população, no caso deste trabalho, mulheres, jovens, entre 20 e 35 anos, em idade fértil, cursando ou 
-formadas em um curso de graduação. 
-
-Essas mulheres, então, possuem alto grau de instrução e acesso à informação. Elas possuem um bom nível de conhecimento sobre o 
-funcionamento do próprio corpo e tem acesso a diversos tipos de métodos contraceptivos. Algumas optaram por não utilizar 
-métodos contraceptivos hormonais. 
 
 Ao longo do estudo, as mulheres foram instruídas para ficarem atentas às mudanças do próprio corpo, fazendo anotações pessoais 
 da forma que acharem mais confortável.
@@ -62,7 +53,7 @@ Após o primeiro ciclo realizado na primeira parte desse trabalho, foi possível
 que resultou no aplicativo Mina, disponibilizado apenas para aplicativos Android, caracterizando o grupo do teste de usabilidade como 
 usuárias Android.
 
-O grupo, formado pela Autora, contava, inicialmente, com 23 mulheres, mais que o dobro do número considerado ideal 
+O grupo formado pela Autora, contava, inicialmente, com 23 mulheres, mais que o dobro do número considerado ideal 
 para um estudo de caso (quatro a 10 pessoas). 
 O primeiro ciclo contou com a participação de todas, mas devido ao tempo de realização entre a primeira e a segunda parte desse trabalho, 
 algumas mulheres acabaram saindo do grupo ou simplesmente perdendo o interesse. Outra barreira foi o lançamento apenas para plataforma Android. 
@@ -102,90 +93,90 @@ encontradas no repositório do github\footnote{repositório github: https://gith
 
 \end{itemize}
 
-O questionário\footnote{terceiro questionário : https://forms.gle/j7eCWStZPbT4Ppy59} foi feito utilizando a plataforma Google Forms, 
+O questionário foi feito utilizando a plataforma Google Forms, 
 e foi respondido de forma anônima, para que as
 participantes se sentissem mais confortáveis respondendo-o. Ao todo, o questionário contou com 22 perguntas, sendo 18 fechadas 
 (Tabela \ref{tab15} e \ref{tab17}) e 
-quatro abertas (Tabela \ref{tab16}). Foram recebidas 7 respostas até a data 13/04/2022. Todas as respostas estão 
-detalhadas no relatório no Apêndice \ref{usertest} .
+quatro abertas (Tabela \ref{tab16}). Foram recebidas sete respostas até a data 13/04/2022. Todas as respostas estão 
+detalhadas no relatório \footnote{relatório teste de usabilidade: shorturl.at/luN01 } disponibilizado no Google Drive.
 
-\begin{table}[ht]
+\begin{table}[htbp]
     \centering
     \caption{Perguntas Abertas do Terceiro Questionário}
     \label{tab16}
-    \begin{tabular}{c}
+    \begin{tabular}{p{15cm}}
         \toprule
         \textbf{Perguntas abertas} \\
         \midrule     
-        \begin{minipage} [t] {1\textwidth} 1 - (P01) Você teve alguma dificuldade com o processo de criação de conta e login? Teria alguma sugestão de melhoria?\end{minipage} \\
+        1 - (P01) Você teve alguma dificuldade com o processo de criação de conta e login? Teria alguma sugestão de melhoria? \\
         \midrule
-        \begin{minipage} [t] {1\textwidth} 2 - (P02) Você teve alguma dificuldade para responder o questionário? Teria alguma sugestão de melhoria?\end{minipage}\\
+        2 - (P02) Você teve alguma dificuldade para responder o questionário? Teria alguma sugestão de melhoria?\\
         \midrule
-        \begin{minipage} [t] {1\textwidth} 3 - Você teve alguma dificuldade nos processos anteriores ?  \end{minipage}\\
+        3 - Você teve alguma dificuldade nos processos anteriores ?  \\
         \midrule
-        \begin{minipage} [t] {1\textwidth} 4 - Você teria alguma sugestão de melhoria para os processos anteriores? \end{minipage}\\
+        4 - Você teria alguma sugestão de melhoria para os processos anteriores? \\
         \bottomrule
     \end{tabular} 
 \end{table}
 
-\begin{table}[ht]
+\begin{table}[htbp]
     \centering
     \caption{Perguntas Fechadas do Terceiro Questionário - Parte 1}
     \label{tab15}
-    \begin{tabular}{c}
+    \begin{tabular}{p{15cm}}
         \toprule
         \textbf{Perguntas fechadas} \\
         \midrule
-        \begin{minipage} [t] {1\textwidth} 1 - (P01) Tente criar uma conta utilizando email, nome de usuário e senha ao clicar em criar conta ou entrar utilizando uma conta do Google. Você conseguiu?
-        \end{minipage} \\
+        1 - (P01) Tente criar uma conta utilizando email, nome de usuário e senha ao clicar em criar conta ou entrar utilizando uma conta do Google. Você conseguiu?
+         \\
         \midrule
-        \begin{minipage} [t] {1\textwidth} 2 - (P01) Você teve alguma dificuldade com o processo de criação de conta e login? Teria alguma sugestão de melhoria?
-        \end{minipage}\\
+        2 - (P01) Você teve alguma dificuldade com o processo de criação de conta e login? Teria alguma sugestão de melhoria?
+        \\
         \midrule
-        \begin{minipage} [t] {1\textwidth} 3 - (P02) Ao entrar na conta a primeira vez é esperado que você tenha que responder um pequeno questionário em que a primeira tela é para selecionar a data da última menstruação. Essa tela apareceu? \end{minipage} \\
+        3 - (P02) Ao entrar na conta a primeira vez é esperado que você tenha que responder um pequeno questionário em que a primeira tela é para selecionar a data da última menstruação. Essa tela apareceu?  \\
         \midrule
-        \begin{minipage} [t] {1\textwidth} 4 - (P02) Tente responder todas as perguntas do questionário. Você conseguiu finalizar esse processo? \end{minipage}  \\
+        4 - (P02) Tente responder todas as perguntas do questionário. Você conseguiu finalizar esse processo?   \\
         \midrule
-        \begin{minipage} [t] {1\textwidth} 5 - (P06) É esperado que a primeira tela que apareça após responder o questionário seja a do calendário. Essa tela apareceu? \end{minipage}\\
+        5 - (P06) É esperado que a primeira tela que apareça após responder o questionário seja a do calendário. Essa tela apareceu? \\
         \midrule
-        \begin{minipage} [t] {1\textwidth} 6 - (P06) Você conseguiu identificar qual fase do ciclo você está? \end{minipage} \\
+        6 - (P06) Você conseguiu identificar qual fase do ciclo você está?  \\
         \midrule
-        \begin{minipage} [t] {1\textwidth} 7 - (P06) O calendário está coerente, começando na data da sua última menstruação e tendo o tamanho do ciclo respondido no questionário? \end{minipage}\\
+        7 - (P06) O calendário está coerente, começando na data da sua última menstruação e tendo o tamanho do ciclo respondido no questionário? \\
         \midrule
-        \begin{minipage} [t] {1\textwidth} 8 - (P04) Tente acessar a recomendação de tarefas na previsão de hoje. Pode ser que uma mensagem dizendo que as recomendações estão sendo geradas apareça. Essa mensagem apareceu para você? \end{minipage}\\
+        8 - (P04) Tente acessar a recomendação de tarefas na previsão de hoje. Pode ser que uma mensagem dizendo que as recomendações estão sendo geradas apareça. Essa mensagem apareceu para você? \\
         \midrule
-        \begin{minipage} [t] {1\textwidth} 9 - (P04) As recomendações levam de 1 a 5 min para aparecerem após a criação da conta, tente acessar novamente durante esse tempo. Aproveite para responder as outras questões enquanto as recomendações não aparecem. Quanto tempo demorou para as recomendações aparecerem? \end{minipage}\\
+        9 - (P04) As recomendações levam de 1 a 5 min para aparecerem após a criação da conta, tente acessar novamente durante esse tempo. Aproveite para responder as outras questões enquanto as recomendações não aparecem. Quanto tempo demorou para as recomendações aparecerem? \\
         \bottomrule
     \end{tabular}
 \end{table}
 
 
 
-\begin{table}[ht]
+\begin{table}[htbp]
     \centering
     \caption{Perguntas Fechadas do Terceiro Questionário - Parte 2}
     \label{tab17}
-    \begin{tabular}{c}
+    \begin{tabular}{p{15cm}}
         \toprule
         \textbf{Perguntas fechadas} \\
         \midrule
-        \begin{minipage} [t] {1\textwidth} 10 - (P03) Na página do calendário, entre em sobre a fase. Você achou útil um texto explicativo sobre a fase? \end{minipage}\\
+        10 - (P03) Na página do calendário, entre em sobre a fase. Você achou útil um texto explicativo sobre a fase? \\
         \midrule
-        \begin{minipage} [t] {1\textwidth} 11 - (P04) Tente acessar a aba avaliação pelo menu inferior. Uma lista com as tarefas e opções entre mais fácil, neutro e mais difícil apareceu? (É possível que as recomendações ainda não tenham sido geradas, espere um pouco) \end{minipage}\\
+        11 - (P04) Tente acessar a aba avaliação pelo menu inferior. Uma lista com as tarefas e opções entre mais fácil, neutro e mais difícil apareceu? (É possível que as recomendações ainda não tenham sido geradas, espere um pouco) \\
         \midrule
-        \begin{minipage} [t] {1\textwidth} 12 - (P04) Selecione as opções correspondentes a tarefa e envie a avaliação. Uma mensagem dizendo que a avaliação foi enviada apareceu? \end{minipage}\\
+        12 - (P04) Selecione as opções correspondentes a tarefa e envie a avaliação. Uma mensagem dizendo que a avaliação foi enviada apareceu? \\
         \midrule
-        \begin{minipage} [t] {1\textwidth} 13 - (P04) Volte a aba de previsão de hoje. Você notou alguma mudança nas recomendações? \end{minipage}\\
+        13 - (P04) Volte a aba de previsão de hoje. Você notou alguma mudança nas recomendações? \\
         \midrule
-        \begin{minipage} [t] {1\textwidth} 14 - (P05) Tente acessar o perfil pelo menu inferior e sair da aplicação, você foi redirecionado para o login ? \end{minipage}\\
+        14 - (P05) Tente acessar o perfil pelo menu inferior e sair da aplicação, você foi redirecionado para o login ? \\
         \midrule
-        \begin{minipage} [t] {1\textwidth} 15 - (P01) Tente recuperar a senha em esqueci a senha inserindo o seu email. Você recebeu um email para recuperação de senha? \end{minipage}\\
+        15 - (P01) Tente recuperar a senha em esqueci a senha inserindo o seu email. Você recebeu um email para recuperação de senha? \\
         \midrule
-        \begin{minipage} [t] {1\textwidth} 16 - (P01) Tente entrar novamente, agora com a conta ja criada você foi direcionado para a página inicial com o calendário? \end{minipage}\\
+        16 - (P01) Tente entrar novamente, agora com a conta ja criada você foi direcionado para a página inicial com o calendário? \\
         \midrule
-        \begin{minipage} [t] {1\textwidth} 17 - (P06) Por último, tente adicionar um novo ciclo. Você conseguiu? \end{minipage}\\
+        17 - (P06) Por último, tente adicionar um novo ciclo. Você conseguiu? \\
         \midrule
-        \begin{minipage} [t] {1\textwidth} 18 - (P06) O calendário atualizou com os dados do novo ciclo? \end{minipage}\\
+        18 - (P06) O calendário atualizou com os dados do novo ciclo? \\
         \bottomrule
     \end{tabular}
 \end{table}
@@ -252,7 +243,7 @@ Após as usuárias criarem as contas, responderem os questionários e enviarem o
 mudaram de grupo, e que as pontuações para as tarefas das usuárias e dos grupos foram atualizadas corretamente, demonstrando que 
 a função de \emph{feedback} teve o comportamento esperado. 
 
-\begin{figure}[ht]
+\begin{figure}[htbp]
 	\caption{Grupo e Tarefas da Usuária Antes da Avaliação}
 	\begin{center}
 	\includegraphics[keepaspectratio=true,scale=0.18]{figuras/db1.jpeg}
@@ -261,7 +252,7 @@ a função de \emph{feedback} teve o comportamento esperado.
     \label{fig23}
 \end{figure}
 
-\begin{figure}[ht]
+\begin{figure}[htbp]
 	\caption{Grupo e Tarefas da Usuária Depois da Avaliação}
 	\begin{center}
 	\includegraphics[keepaspectratio=true,scale=0.37]{figuras/db4.jpeg}
@@ -270,7 +261,7 @@ a função de \emph{feedback} teve o comportamento esperado.
     \label{fig24}
 \end{figure}
 
-\begin{figure}[ht]
+\begin{figure}[htbp]
 	\caption{Grupo com Pontuações da Usuária Adicionados}
 	\begin{center}
 	\includegraphics[keepaspectratio=true,scale=0.37]{figuras/db3.png}
@@ -281,28 +272,6 @@ a função de \emph{feedback} teve o comportamento esperado.
 
 
 \section{Considerações Finais do Capítulo}
-
-Ao longo da primeira etapa do trabalho, foi possível vivenciar algumas atividades relevantes, tais como:
-
-\begin{itemize}
-    \item pesquisa e escrita científica;
-    \item fechamento de escopo do trabalho;
-    \item embasamento teórico e tecnológico;
-    \item detalhamento metodológico;
-    \item apresentação da proposta, das principais contribuições pretendidas com a realização da mesma e da prova de conceito, e
-    \item acompanhamento contínuo das realizações, com reuniões periódicas entre orientado e orientador.
-\end{itemize}
-
-Ao longo da segunda etapa do trabalho, foi possível vivenciar algumas atividades relevantes, tais como:
-
-\begin{itemize}
-    \item realizar correções da banca;
-    \item desenvolvimento do aplicativo;
-    \item aplicar metodologia estabelecida;
-    \item realização do teste de usabilidade;
-    \item documentação de melhorias, e
-    \item acompanhamento contínuo das realizações, com reuniões periódicas entre orientado e orientador.
-\end{itemize}
 
 Neste capítulo, foram apresentados os resultados obtidos com o estudo de casos aplicado a um grupo formado pela autora que conta com 
 mulheres em idade fértil. Os resultados encontrados
