--- a/tcc2/editaveis/introducao.tex
+++ b/tcc2/editaveis/introducao.tex
@@ -56,12 +56,12 @@ tais como: habilidades espacial, visual, verbal, controle cognitivo, e aspectos 
 No estudo de \citeonline{poroma2014}, na parte de habilidade espacial visual, 
 \citeonline{hausmann2000}, \citeonline{maki2002}, \citeonline{courvoisier2013}, \citeonline{becker1982} e \citeonline{phillips1992} 
 relataram uma melhora 
-nas habilidades no início da fase folicular. \citeonline{hampson2014} relataram melhoras nas habilidades quando o 
+na habilidade no início da fase folicular. \citeonline{hampson2014} relataram melhoras naa habilidadea quando o 
 estradiol estava baixo. 
 
 
 Em tarefas verbais, o trabalho \cite{maki2002} relatou melhoras no meio da fase lútea. Outro 
-reportou que há melhor realização de tarefas verbais em mulheres que utilizam anticoncepcional(AC) 
+reportou que há melhor realização de tarefas verbais em mulheres que utilizam anticoncepcional (AC) 
 \cite{mordecai2008}. Por fim, dois trabalhos concluem que a realização das tarefas verbais é melhor 
 ao final das fases folicular e lútea \cite{Rosenberg2002, solis2004}.
 
@@ -81,9 +81,9 @@ compreendem variações de humor, irritabilidade, ansiedade, entre outros. Essas
 classificadas como transtorno disfórico pré-menstrual (TDPM) \cite{ACOG2000}.
 
 Esse estudo fundamenta-se no fato de que o ciclo menstrual influencia as emoções e os comportamentos 
-das mulheres. Como contribuição principal, implementa-se um aplicativo de recomendação, o qual 
+das mulheres. Como contribuição principal desse trabalho, implementa-se um aplicativo de recomendação, o qual 
 indica tarefas cotidianas que seriam mais fáceis ou mais difíceis de serem realizadas, dependendo do 
-perfil e da fase do ciclo menstrual que a mulher se encontra, além de conferir informações sobre como 
+perfil e da fase do ciclo menstrual que a mulher se encontra. O sistema também confere informações sobre como 
 a fase possivelmente influencia em suas habilidades. Espera-se que esse conhecimento beneficie, 
 adicionalmente, a inteligência emocional e, consequentemente, o desempenho cognitivo individual das 
 mulheres. 
@@ -91,8 +91,8 @@ mulheres.
 A inteligência emocional é medida utilizando \textit{Multifactor Emotional Intelligence Scale} (MEIS), 
 compreendendo três habilidades emocionais distintas: perceber, entender e regular emoções. Em linhas 
 gerais, a inteligência 
-emocional é \lq \lq A habilidade de monitorar os próprios sentimentos e emoções e de outros indivíduos, 
-discriminar entre eles e usar essas informações para guiar o pensamento e ações\rq \rq \cite{salovey1990}. 
+emocional é \lq \lq a habilidade de monitorar os próprios sentimentos e emoções e de outros indivíduos, 
+discriminar entre eles e usar essas informações para guiar o pensamento e ações\rq \rq  \cite{salovey1990}. 
 No estudo realizado por \citeonline{lam2002}, os autores relacionam o impacto da inteligência emocional 
 com o desempenho individual, e confirmam a hipótese de 
 que a inteligência emocional influencia no desempenho cognitivo individual. 
@@ -103,16 +103,16 @@ prevendo padrões em seus comportamentos, poderia aumentar
 significativamente a inteligência emocional dessas mulheres. 
 
 
-O uso de recomendação, mais precisamente o uso dos conceitos associados aos sistemas de recomendação, 
-foi escolhido, pois esses sistemas tratam muitas informações, fornecendo recomendações personalizadas, 
+Foi escolhido o uso de recomendação, mais precisamente o uso dos conceitos associados aos sistemas de recomendação, pois esses sistemas tratam muitas informações, fornecendo recomendações personalizadas, 
 e procurando equacionar fatores como: precisão, novidade, dispersão e estabilidade \cite{bobadilla2013}.
 
 
 A problemática, portanto, compreende levantar os diversos tipos de perfis das mulheres de acordo com a 
 fase do ciclo menstrual delas; descobrir se existe diferença entre mulheres que utilizam ou não métodos 
 hormonais ou tem algum distúrbio hormonal, e como essas nuances influenciam as tarefas cotidianas delas. 
-Além de conseguir inferir em qual fase do ciclo a mulher está apenas com o uso do método do calendário. 
-Para isso, será utilizada a literatura existente sobre o assunto, pesquisas previamente publicadas e 
+Outra problemática foi conseguir inferir em qual fase do ciclo a mulher está apenas com o 
+uso do método do calendário. 
+Para isso, foi utilizada a literatura existente sobre o assunto, pesquisas previamente publicadas e 
 pesquisas da própria autora, em formato de questionários, sendo esses aplicados a mulheres em idade 
 reprodutiva.
 
@@ -120,8 +120,9 @@ reprodutiva.
 Dada a particularidade do assunto, bem como por lidar com aspectos pessoais, vale ressaltar que este 
 estudo não tem como objetivo entrar na discussão de diferença entre sexo. Além disso, o estudo não 
 conta com o acompanhamento dedicado de um profissional da saúde, uma vez que a ideia não é representar 
-um tratamento médico ou algo nesse sentido. Trata-se apenas de um estudo, tendo como objetivo desenvolver 
-um aplicativo informativo, totalmente baseado na literatura especializada, e que estimula as mulheres a 
+um tratamento médico ou algo nesse sentido. Trata-se apenas de um estudo, cujo objetivo ê desenvolver 
+um aplicativo informativo, baseado na literatura especializada e na opinião de algumas mulheres (estudo de caso), 
+que estimule as mulheres a 
 se conhecerem melhor. 
 
 
@@ -135,7 +136,7 @@ Nesse sentido, as seguintes questões de pesquisa nortearam o trabalho, sendo:
 
 \begin{itemize}
 
-        \item Como as fases do ciclo menstrual influência na execução de tarefas cotidianas das mulheres?
+        \item Como as fases do ciclo menstrual influencia na execução de tarefas cotidianas das mulheres?
 
         \item Por que seria importante adquirir esse conhecimento? 
 
