--- a/tcc2/editaveis/resumo.tex
+++ b/tcc2/editaveis/resumo.tex
@@ -1,6 +1,7 @@
 \begin{resumo}
 
-    Durante o ciclo menstrual, mulheres passam por várias mudanças hormonais que podem levar a 
+    Durante o ciclo menstrual, mulheres passam por várias mudanças hormonais que 
+    podem levar a 
     mudanças de humor, comportamento e sintomas físicos. Essas mudanças podem influenciar na 
     disposição para realizar certas tarefas cotidianas. Para 
     ajudar no autoconhecimento, melhorar a inteligência emocional 
@@ -12,7 +13,7 @@
     em um sistema de recomendação colaborativo, procurando sugerir tarefas 
     que podem ser executadas com mais facilidade ou dificuldade. Com o levantamento bibliográfico, 
     foi possível utilizar o método do calendário para determinar a fase do ciclo. Juntamente com o 
-    estudo de caso, foi possível levantar os perfis e tarefas os perfis e as tarefas cotidianas, 
+    estudo de caso, foi possível levantar os perfis e tarefas cotidianas, 
     sendo esses insumos utilizados no sistema de recomendação.
     
      \vspace{\onelineskip}
