--- a/tcc2/editaveis/suporteTecnologico.tex
+++ b/tcc2/editaveis/suporteTecnologico.tex
@@ -16,13 +16,13 @@ código do aplicativo.
 
 O React Native \cite{reactNative}, criado pelo Facebook, combina as melhores partes de 
 desenvolvimenta nativo com 
-o \emph{framework} React, uma biblioteca JavaScript para construir interface de usuário(UI). 
+o \emph{framework} React, uma biblioteca JavaScript para construir interface de usuário (UI). 
 É usada para desenvolver aplicativos para iOS e Android de forma nativa, ou seja, utilizando 
 componentes próprios da plataforma iOS ou Android para construir a aplicação. O React Native 
 possibilita que uma única base de código possa ser utilizada para construir aplicações 
 multi-plataforma.
 
-Ele é composto por um SDK(\emph{Software Development Kit}) e um
+Ele é composto por um SDK (\emph{Software Development Kit}) e um
 \emph{framework}. O SDK é uma coleção de ferramentas que ajudam
 o desenvolvedor a desenvolver a aplicação e executá-la em
 plataformas específicas. Essas ferramentas incluem bibliotecas,
@@ -189,27 +189,27 @@ A escrita do TCC foi realizada utilizando o LaTex, com base em um \emph{template
 disponibilizado pela Faculdade do Gama em um repositório do GitHub. 
 
 
-\begin{table}[ht]
+\begin{table}[htbp]
 	\centering
     \caption{Suporte Tecnológico}
 	\label{tab06}
-	\begin{tabular}{ccc}
+	\begin{tabular}{p{4cm}p{7cm}p{2cm}}
 	\toprule
-	Tecnologia & Utilização  & Versão   \\  
+	\textbf{Tecnologia} & \textbf{Utilização}  & \textbf{Versão}   \\  
 	\midrule
-	\begin{minipage} [t] {0.3\textwidth} \centering  React Native \end{minipage}                     	& \begin{minipage} [t] {0.4\textwidth} \centering \emph{Framework} para criação de aplicativos nativos. \end{minipage}	 & \begin{minipage} [t] {0.2\textwidth} \centering  0.68 \end{minipage}   \\  
-\midrule	\begin{minipage} [t] {0.3\textwidth} \centering  TypeScript \end{minipage}  & \begin{minipage} [t] {0.4\textwidth} \centering  Linguagem de programação.     \end{minipage}  &  \begin{minipage} [t] {0.2\textwidth} \centering  4.4.4 \end{minipage} \\  
-\midrule	\begin{minipage} [t] {0.3\textwidth} \centering  Firebase  \end{minipage}                        & \begin{minipage} [t] {0.4\textwidth} \centering  Banco de dados, autenticação e funções.  \end{minipage}                   & \begin{minipage} [t] {0.2\textwidth} \centering  - \end{minipage}  \\  
-\midrule	\begin{minipage} [t] {0.3\textwidth} \centering  Zenhub  \end{minipage} & \begin{minipage} [t] {0.4\textwidth} \centering  Gerenciamento de tarefas relacionadas ao desenvolvimento da aplicação.  \end{minipage}  & \begin{minipage} [t] {0.2\textwidth} \centering  - \end{minipage}  \\  
-\midrule	\begin{minipage} [t] {0.3\textwidth} \centering Trello  \end{minipage}  	& \begin{minipage} [t] {0.4\textwidth} \centering Gerenciamento de tarefas relativas ao desenvolvimento dos TCCs e registro de artigos. \end{minipage}	 & \begin{minipage} [t] {0.2\textwidth} \centering  - \end{minipage}  \\  
-\midrule	\begin{minipage} [t] {0.3\textwidth} \centering  Slack \end{minipage}    & \begin{minipage} [t] {0.4\textwidth} \centering  Comunicação com os orientadores. \end{minipage}        & \begin{minipage} [t] {0.2\textwidth} \centering  - \end{minipage}  \\  
-\midrule	\begin{minipage} [t] {0.3\textwidth} \centering  Visual Studio Code \end{minipage}  	& \begin{minipage} [t] {0.4\textwidth} \centering Ambiente de desenvolvimento. \end{minipage}	 & \begin{minipage} [t] {0.2\textwidth} \centering  1.63.2 \end{minipage}  \\ 
-\midrule	\begin{minipage} [t] {0.3\textwidth} \centering  Android Studio  \end{minipage} & \begin{minipage} [t] {0.4\textwidth} \centering  Geração de dispositivos virtuais android. \end{minipage}  &  \begin{minipage} [t] {0.2\textwidth} \centering  2021.1.1 \end{minipage}  \\ 
-\midrule	\begin{minipage} [t] {0.3\textwidth} \centering  MacOS \end{minipage}                & \begin{minipage} [t] {0.4\textwidth} \centering  Sistema operacional.      \end{minipage}                   & \begin{minipage} [t] {0.2\textwidth} \centering  - \end{minipage}                               \\ 
-\midrule	\begin{minipage} [t] {0.3\textwidth} \centering  Figma  \end{minipage} & \begin{minipage} [t] {0.4\textwidth} \centering  Prototipação. \end{minipage}  &  \begin{minipage} [t] {0.2\textwidth} \centering  - \end{minipage}  \\ 
-\midrule	\begin{minipage} [t] {0.3\textwidth} \centering Git \end{minipage} 	& \begin{minipage} [t] {0.4\textwidth} \centering Controle de versão de código e escrita dos TCCs. \end{minipage}	 & \begin{minipage} [t] {0.2\textwidth} \centering  2.30.1 \end{minipage}   \\ 
-\midrule	\begin{minipage} [t] {0.3\textwidth} \centering  \end{minipage} & \begin{minipage} [t] {0.4\textwidth} \centering  Repositório da aplicação e TCCs.   \end{minipage}  &  \begin{minipage} [t] {0.2\textwidth} \centering - \end{minipage}  \\ 
-\midrule	\begin{minipage} [t] {0.3\textwidth} \centering  LaTex \end{minipage}   & \begin{minipage} [t] {0.4\textwidth} \centering  Edição de texto.  \end{minipage}  & \begin{minipage} [t] {0.2\textwidth} \centering  - \end{minipage}   \\ 
+	 React Native                     	& \emph{Framework} para criação de aplicativos nativos. 	 &  0.68   \\  
+\midrule	TypeScript & Linguagem de programação.     &  4.4.4 \\  
+\midrule	Firebase                         &  Banco de dados, autenticação e funções.                    &  -  \\  
+\midrule	 Zenhub  &  Gerenciamento de tarefas relacionadas ao desenvolvimento da aplicação.   &  -  \\  
+\midrule	Trello   	& Gerenciamento de tarefas relativas ao desenvolvimento dos TCCs e registro de artigos. 	 &  -  \\  
+\midrule	 Slack    &  Comunicação com os orientadores.        &  -  \\  
+\midrule	 Visual Studio Code  	& Ambiente de desenvolvimento. 	 &  1.63.2  \\ 
+\midrule	 Android Studio  &  Geração de dispositivos virtuais android.  &   2021.1.1  \\ 
+\midrule	 MacOS                &  Sistema operacional.                        &  -                               \\ 
+\midrule	 Figma  &  Prototipação.  &   -  \\ 
+\midrule	Git 	& Controle de versão de código e escrita dos TCCs. 	 &  2.30.1   \\ 
+\midrule	 GitHub &  Repositório da aplicação e TCCs.    &  -  \\ 
+\midrule	 LaTex   &  Edição de texto.   &  -   \\ 
 	\bottomrule
 \end{tabular}
 \end{table}
